<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    style="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView android:text="@string/titulo" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tittle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_a"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical"
            style="@style/label" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/input_a"
            android:layout_gravity="center_vertical"
            style="@style/input" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_b"
            android:id="@+id/textView2"
            android:layout_gravity="center_vertical"
            style="@style/label" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/input_b"
            android:layout_gravity="center_vertical"
            style="@style/input" />

        <RadioGroup style="@style/group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suma"
                android:id="@+id/radioButton1"
                style="@style/radio"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resta"
                android:id="@+id/radioButton2"
                style="@style/radio"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mul"
                android:id="@+id/radioButton3"
                style="@style/radio"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/div"
                android:id="@+id/radioButton4"
                style="@style/radio"/>

        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resultado"
            android:editable="true"
            style="@style/input"/>

    </LinearLayout>

</RelativeLayout>
